Fixed jumping issue on job list

--- a/src/app/views/jobs/jobs.component.scss
+++ b/src/app/views/jobs/jobs.component.scss
@@ -48,6 +48,7 @@
 
 .job-list-container {
   background-color: $default-bg-color;
+  min-height: 1026px;
 
   > div {
     width: 100%;
